--- a/PracticalApps/Northwind.Web/Northwind.Web.csproj
+++ b/PracticalApps/Northwind.Web/Northwind.Web.csproj
@@ -19,5 +19,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Northwind.Common.DataContext.Sqlite\Northwind.Common.DataContext.Sqlite.csproj" />
+      <ProjectReference Include="..\Northwind.Razor.Employees\Northwind.Razor.Employees.csproj" />
     </ItemGroup>
 </Project>
