--- a/PracticalApps/Northwind.Mvc/Northwind.Mvc.csproj
+++ b/PracticalApps/Northwind.Mvc/Northwind.Mvc.csproj
@@ -19,4 +19,12 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Northwind.Common.DataContext.Sqlite\Northwind.Common.DataContext.Sqlite.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\images\" />
+    </ItemGroup>
+
 </Project>
